--- a/bootstrap-3.3.7-dist/css/main.css
+++ b/bootstrap-3.3.7-dist/css/main.css
@@ -56,7 +56,7 @@ a.btn-blue, .btn-blue:hover {
 
 /* Main Menu Styles End */
 
-/* Main Header Menu Styles Start */
+/* Main Header Styles Start */
 
 #main-header {
     height: 100vh;
@@ -71,11 +71,46 @@ a.btn-blue, .btn-blue:hover {
 #main-header .header-caption {
     position: absolute;
     top: 50%;
-    transition: width 2s;
-    
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;   
     
 }
 
 
+#main-header .header-caption h1{
+    color: #fff;
+    margin: 45px 0;
+}
 
-/* Main Header Menu Styles End */
+
+#main-header .header-caption h2{
+    color: #fff;
+    font-family: 'Droid Serif', 'sans-serif';
+    font-size: 2.5em;
+}
+
+/* Main Header Styles End */
+
+#section services {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+a.btn-blue, .btn-blue {
+    background-color: #0ed8d6;
+    border: 1px solid #0ed8d6;
+    font-family: 'Montserrat', 'sans-serif';
+    color: #fff;
+    transition: all .3s;
+    padding: 15px 30px;
+}
+
+a.btn-blue, .btn-blue :hover {
+    background-color: #fff;
+    border: 1px solid #0ed8d6;
+    color: #0ed8d6;
+}
